--- a/Smart Proxy X/src/main/res/values-zh-rCN/strings.xml
+++ b/Smart Proxy X/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SmartProxy</string>
+    <string name="app_name">一键代理</string>
     <string name="menu_item_switch">代理</string>
     <string name="menu_item_about">关于</string>
     <string name="menu_item_exit">退出</string>
