--- a/Smart Proxy X/src/main/res/values/strings.xml
+++ b/Smart Proxy X/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SmartProxy</string>
+    <string name="app_name">onekey</string>
     <string name="menu_item_switch">Proxy</string>
     <string name="menu_item_about">About</string>
     <string name="menu_item_exit">Exit</string>
